external-crates/move/crates/move-compiler/tests/move_2024/parser/macro_identifier_invalid_no_following_characters.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E01002]: unexpected token
  ┌─ tests/move_2024/parser/macro_identifier_invalid_no_following_characters.move:2:19
  │
2 │     macro fun foo($
  │                   ^ Expected an identifier following '$', e.g. '$x'

error[E01002]: unexpected token
  ┌─ tests/move_2024/parser/macro_identifier_invalid_no_following_characters.move:3:1
  │
3 │ 
  │ ^
  │ 
  │ Unexpected end-of-file
  │ Expected '{'
